<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/store_key_text"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"/>

        <EditText
            android:id="@+id/access_token_edit"
            android:inputType="textNoSuggestions"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/expired_time_edit"
            android:inputType="number"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/refresh_token_edit"
            android:inputType="textNoSuggestions"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="onSave"
            android:text="@string/access_token_edit_save" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="onRefreshToken"
            android:text="@string/refresh_token" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="onChangeAccessToken"
            android:text="@string/access_token_edit_change_1" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="onChangeExpiredTime"
            android:text="@string/access_token_edit_change_2" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="onChangeRefreshToken"
            android:text="@string/access_token_edit_change_3" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="onChangeAll"
            android:text="@string/access_token_edit_change_all" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="onRemove"
            android:text="@string/access_token_edit_remove" />

    </LinearLayout>
</ScrollView>
