<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/id_with_tags_setting_projectiontype_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_projectiontype_label" />

                <Spinner
                    android:id="@+id/id_with_tags_setting_projectiontype_spinner"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:spinnerMode="dropdown"
                    android:entries="@array/projectiontype_setting_spinner_src" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/id_with_tags_setting_filetype_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_filetype_label" />

                <Spinner
                    android:id="@+id/id_with_tags_setting_filetype_spinner"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:spinnerMode="dropdown"
                    android:entries="@array/filetype_with_all_setting_spinner_src" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/id_with_tags_setting_dustbox_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_dustbox_label" />

                <CheckBox
                    android:id="@+id/id_with_tags_setting_dustbox_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/id_with_tags_setting_date_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/setting_filter_label" />

	                <Spinner
	                    android:id="@+id/id_with_tags_setting_filter_spinner"
	                    android:layout_width="0dip"
	                    android:layout_height="wrap_content"
	                    android:layout_weight="1"
	                    android:spinnerMode="dropdown"
	                    android:entries="@array/id_setting_filter_spinner_src" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fitsSystemWindows="false"
                    android:orientation="vertical" >

                    <DatePicker
                        android:id="@+id/id_with_tags_setting_date_Picker"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:calendarViewShown="false" />

                    <TimePicker
                        android:id="@+id/id_with_tags_setting_time_Picker"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/id_with_tags_setting_maxresults_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_maxresults_label" />

                <EditText
                    android:id="@+id/id_with_tags_setting_maxresults_edit"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:ems="10" >

                    <requestFocus />
                </EditText>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/id_with_tags_setting_start_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_start_label" />

                <EditText
                    android:id="@+id/id_with_tags_setting_start_edit"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:ems="10" >

                    <requestFocus />
                </EditText>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/id_with_tags_setting_sort_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_sort_label" />

                <Spinner
                    android:id="@+id/id_with_tags_setting_sort_spinner"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:spinnerMode="dropdown"
                    android:entries="@array/sorttype_setting_spinner_src" />

            </LinearLayout>

            <Button
                android:id="@+id/id_with_tags_setting_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/id_with_tags_setting_button_text" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
